revert .mvn