@@ -1,3 +1,1 @@
 -Xmx8192m
---add-opens=java.base/java.nio=ALL-UNNAMED
---add-opens=java.base/sun.nio.ch=ALL-UNNAMED
